# zapora-menu-api

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHENTICATION_SUCCESS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOMAIN_CONFIGURATION.md  Dockerfile  GITHUB_SETUP.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_SUMMARY.md  LICENSE  LICENSE.md  Makefile  PORTFOLIO_SHOWCASE.md  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  QUALITY_SETUP.md  README.md  README_PORTFOLIO.md  SECURITY.md  SECURITY_DEPLOY.md  TESTS_REPORT.md  alembic.ini  deploy.sh  deploy_secure.sh  docker-compose.yml  env.template  generate_secrets.py  manage.sh  mypy.ini  pyproject.toml  pytest.ini  start_server.sh  (+4 more)
.github/workflows/: ci.yml
alembic/: env.py
k8s/base/: backup.yaml  configmap.yaml  fastapi.yaml  grafana.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  prometheus.yaml  redis.yaml  secrets.yaml
k8s/environments/dev/: kustomization.yaml
k8s/environments/prod/: kustomization.yaml
k8s/environments/staging/: kustomization.yaml
monitoring/: prometheus.yml
my_menu_api/: auth.py  cache.py  config.py  database.py  health.py  logging_config.py  main.py  main_backup.py  main_new.py  metrics.py  migration_utils.py  models.py  rate_limiting.py  requirements.txt  schemas.py
my_menu_api/routers/: __init__.py  audit.py  auth.py  images.py  menu_items.py
my_menu_api/services/: __init__.py  audit_service.py  image_service.py  menu_item_service.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py
tests/fixtures/: __init__.py  factories.py
tests/integration/: test_auth_api.py  test_menu_items_api.py
tests/performance/: locustfile.py
tests/unit/: test_audit_service.py  test_image_service.py  test_menu_item_service.py  test_models.py  test_schemas.py
